--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -319,6 +319,8 @@ PD8.GPIO_PuPd=GPIO_PULLUP
 PD8.Locked=true
 PD8.Mode=Half_duplex(single_wire_mode)
 PD8.Signal=USART3_TX
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=MS2_YW
 PE10.Locked=true
 PE10.Signal=GPXTI10
 PE13.GPIOParameters=GPIO_Label
@@ -354,6 +356,8 @@ PE7.Signal=UART7_RX
 PE8.Locked=true
 PE8.Mode=Asynchronous
 PE8.Signal=UART7_TX
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=MS1_YW
 PE9.Locked=true
 PE9.Signal=GPXTI9
 PH0/OSC_IN.Mode=HSE-External-Clock-Source
