--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -1,9 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_11
-ADC1.IPParameters=Rank-7\#ChannelRegularConversion,master,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.ContinuousConvMode=ENABLE
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=Rank-7\#ChannelRegularConversion,master,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ExternalTrigConv
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-7\#ChannelRegularConversion=1
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -50,7 +52,7 @@ FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,8,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,8,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,8,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,8,128,StarJettingTasktTask,As external,NULL,Dynamic,NULL,NULL;headerTask,8,128,StartHeaderTaskTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,8,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,8,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,8,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,8,128,StarJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,8,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
@@ -145,7 +147,7 @@ Mcu.Pin8=PA1
 Mcu.Pin9=PA2
 Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=JETTING_FPGA_REPLY,16;MOTOR_X_TRIG,16;MOTOR_Z1_TRIG,32;MOTOR_Z2_TRIG,64;PUMP_YW1_TRIG,16;PUMP_YW2_TRIG,32;ALL_EMG_STOP,1;ALL_PAUSE,2;ALL_NEW_TASK,4;MAIN_TASK_CPLT,4
+Mcu.UserConstants=JETTING_FPGA_REPLY,16;ALL_EMG_STOP,1;ALL_PAUSE,2;ALL_NEW_TASK,4;MAIN_TASK_CPLT,4
 Mcu.UserName=STM32F427VGTx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
@@ -175,8 +177,10 @@ NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=MX_TRIG
+PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA1.GPIO_PuPd=GPIO_PULLDOWN
 PA1.Locked=true
 PA1.Signal=GPXTI1
 PA10.GPIOParameters=GPIO_Label
@@ -195,12 +199,16 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=GPIO_Label
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA2.GPIO_Label=MZ1_TRIG
+PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA2.GPIO_PuPd=GPIO_PULLDOWN
 PA2.Locked=true
 PA2.Signal=GPXTI2
-PA3.GPIOParameters=GPIO_Label
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA3.GPIO_Label=MZ2_TRIG
+PA3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA3.GPIO_PuPd=GPIO_PULLDOWN
 PA3.Locked=true
 PA3.Signal=GPXTI3
 PA4.GPIOParameters=GPIO_Label
@@ -253,12 +261,16 @@ PC1.Locked=true
 PC1.Signal=ADCx_IN11
 PC12.Mode=SD_1_bit
 PC12.Signal=SDIO_CK
-PC4.GPIOParameters=GPIO_Label
+PC4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC4.GPIO_Label=MS1_YW
+PC4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC4.GPIO_PuPd=GPIO_PULLDOWN
 PC4.Locked=true
 PC4.Signal=GPXTI4
-PC5.GPIOParameters=GPIO_Label
+PC5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC5.GPIO_Label=MS2_YW
+PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC5.GPIO_PuPd=GPIO_PULLDOWN
 PC5.Locked=true
 PC5.Signal=GPXTI5
 PC6.GPIOParameters=GPIO_Label
@@ -319,20 +331,27 @@ PD8.GPIO_PuPd=GPIO_PULLUP
 PD8.Locked=true
 PD8.Mode=Half_duplex(single_wire_mode)
 PD8.Signal=USART3_TX
-PE10.GPIOParameters=GPIO_Label
-PE10.GPIO_Label=MS2_YW
+PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE10.GPIO_Label=JETTING
+PE10.GPIO_PuPd=GPIO_PULLDOWN
 PE10.Locked=true
 PE10.Signal=GPXTI10
-PE13.GPIOParameters=GPIO_Label
+PE13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE13.GPIO_Label=SW3
+PE13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE13.GPIO_PuPd=GPIO_PULLUP
 PE13.Locked=true
 PE13.Signal=GPXTI13
-PE14.GPIOParameters=GPIO_Label
+PE14.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE14.GPIO_Label=SW2
+PE14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
 PE14.Signal=GPXTI14
-PE15.GPIOParameters=GPIO_Label
+PE15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE15.GPIO_Label=SW1
+PE15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE15.GPIO_PuPd=GPIO_PULLUP
 PE15.Locked=true
 PE15.Signal=GPXTI15
 PE2.Mode=TX_Only_Simplex_Unidirect_Master
@@ -356,8 +375,10 @@ PE7.Signal=UART7_RX
 PE8.Locked=true
 PE8.Mode=Asynchronous
 PE8.Signal=UART7_TX
-PE9.GPIOParameters=GPIO_Label
-PE9.GPIO_Label=MS1_YW
+PE9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PE9.GPIO_Label=N_CRC_FAIL
+PE9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE9.GPIO_PuPd=GPIO_PULLDOWN
 PE9.Locked=true
 PE9.Signal=GPXTI9
 PH0/OSC_IN.Mode=HSE-External-Clock-Source
@@ -396,7 +417,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_UART7_Init-UART7-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true,14-MX_SDIO_SD_Init-SDIO-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM9_Init-TIM9-false-HAL-true,18-MX_FATFS_Init-FATFS-false-HAL-false,19-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_UART7_Init-UART7-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true,14-MX_SDIO_SD_Init-SDIO-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM9_Init-TIM9-false-HAL-true,18-MX_FATFS_Init-FATFS-false-HAL-false,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -505,9 +526,11 @@ TIM1.Period=999
 TIM1.Prescaler=83
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
 TIM2.Period=999
 TIM2.Prescaler=83
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IPParameters=EncoderMode
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -536,7 +559,7 @@ TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM9.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload
 TIM9.Period=999
 TIM9.Prescaler=83
-UART7.BaudRate=921600
+UART7.BaudRate=256000
 UART7.IPParameters=VirtualMode,BaudRate,Mode
 UART7.Mode=MODE_TX
 UART7.VirtualMode=Asynchronous
