--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -1,8 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_11
-ADC1.ContinuousConvMode=ENABLE
+ADC1.ContinuousConvMode=DISABLE
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
-ADC1.IPParameters=Rank-7\#ChannelRegularConversion,master,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ExternalTrigConv
+ADC1.IPParameters=Rank-7\#ChannelRegularConversion,master,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ExternalTrigConv,NbrOfConversion
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-7\#ChannelRegularConversion=1
 ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_84CYCLES
@@ -12,7 +13,8 @@ CAD.pinconfig=
 CAD.provider=
 Dma.Request0=SDIO_RX
 Dma.Request1=SDIO_TX
-Dma.RequestsNb=2
+Dma.Request2=UART7_TX
+Dma.RequestsNb=3
 Dma.SDIO_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SDIO_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.SDIO_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
@@ -39,6 +41,16 @@ Dma.SDIO_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.SDIO_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SDIO_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.SDIO_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.UART7_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART7_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART7_TX.2.Instance=DMA1_Stream1
+Dma.UART7_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART7_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.UART7_TX.2.Mode=DMA_NORMAL
+Dma.UART7_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART7_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.UART7_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.UART7_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
@@ -52,7 +64,7 @@ FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,8,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,8,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,8,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,8,128,StarJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,8,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,8,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,8,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,8,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,8,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,8,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
@@ -151,10 +163,18 @@ Mcu.UserConstants=JETTING_FPGA_REPLY,16;ALL_EMG_STOP,1;ALL_PAUSE,2;ALL_NEW_TASK,
 Mcu.UserName=STM32F427VGTx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -169,13 +189,11 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false\:true
-NVIC.TIM2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false\:true
 NVIC.TIM4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:false\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
-NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=MX_TRIG
@@ -338,19 +356,19 @@ PE10.Locked=true
 PE10.Signal=GPXTI10
 PE13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE13.GPIO_Label=SW3
-PE13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE13.GPIO_PuPd=GPIO_PULLUP
 PE13.Locked=true
 PE13.Signal=GPXTI13
 PE14.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE14.GPIO_Label=SW2
-PE14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
 PE14.Signal=GPXTI14
 PE15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE15.GPIO_Label=SW1
-PE15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE15.GPIO_PuPd=GPIO_PULLUP
 PE15.Locked=true
 PE15.Signal=GPXTI15
@@ -529,7 +547,7 @@ TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
 TIM2.Period=999
 TIM2.Prescaler=83
-TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM2.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IPParameters=EncoderMode
