--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -64,7 +64,7 @@ FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,24,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,8,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,8,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,8,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,8,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,8,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,32,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,24,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,24,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,24,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,24,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,24,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL;compTask,32,256,StartCompTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
