--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -64,7 +64,7 @@ FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,32,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,24,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,24,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,24,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,24,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,24,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL;compTask,32,256,StartCompTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,32,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,24,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,24,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,24,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,24,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,24,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
@@ -159,7 +159,7 @@ Mcu.Pin8=PA1
 Mcu.Pin9=PA2
 Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=JETTING_FPGA_REPLY,16;ALL_EMG_STOP,1;ALL_PAUSE,2;ALL_NEW_TASK,4;MAIN_TASK_CPLT,4
+Mcu.UserConstants=JETTING_FPGA_REPLY,16;ALL_EMG_STOP,1;JETTING_UART_CPLT,8;ALL_NEW_TASK,4;MAIN_TASK_CPLT,4
 Mcu.UserName=STM32F427VGTx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
@@ -194,6 +194,7 @@ NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:false\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
+NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=MX_TRIG
