--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -63,7 +63,8 @@ FATFS0.BSP.name=Detect_SDIO
 FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PD0
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01
+FREERTOS.Mutexes01=MUart1Mutex,Dynamic,NULL,Available;MTim8Mutex,Dynamic,NULL,Available
 FREERTOS.Tasks01=defaultTask,32,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,24,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,24,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,24,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,24,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,24,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -198,20 +199,26 @@ NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=MX_TRIG
-PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA1.GPIO_PuPd=GPIO_PULLDOWN
+PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPXTI1
-PA10.GPIOParameters=GPIO_Label
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA10.GPIO_Label=LEDR
+PA10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPIO_Output
-PA11.GPIOParameters=GPIO_Label
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA11.GPIO_Label=LEDG
+PA11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Locked=true
 PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_Label
+PA12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA12.GPIO_Label=LEDB
+PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA12.GPIO_PuPd=GPIO_PULLUP
 PA12.Locked=true
 PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
@@ -220,24 +227,26 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA2.GPIO_Label=MZ1_TRIG
-PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA2.GPIO_PuPd=GPIO_PULLDOWN
+PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.Locked=true
 PA2.Signal=GPXTI2
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA3.GPIO_Label=MZ2_TRIG
-PA3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA3.GPIO_PuPd=GPIO_PULLDOWN
+PA3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPXTI3
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=VSEL_C
+PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_Label
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA6.GPIO_Label=VSEL_D
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.Locked=true
@@ -252,8 +261,9 @@ PA9.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
 PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Mode=Half_duplex(single_wire_mode)
 PA9.Signal=USART1_TX
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=EN37V
+PB1.GPIO_PuPd=GPIO_PULLDOWN
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB14.Mode=Device_Only_FS
@@ -306,8 +316,9 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=MMZ2
 PC9.Locked=true
 PC9.Signal=S_TIM8_CH4
-PD0.GPIOParameters=GPIO_Label
+PD0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD0.GPIO_Label=SDIO_CD
+PD0.GPIO_PuPd=GPIO_PULLUP
 PD0.Locked=true
 PD0.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Label
@@ -324,24 +335,29 @@ PD15.GPIO_Label=MMS2
 PD15.Signal=S_TIM4_CH4
 PD2.Mode=SD_1_bit
 PD2.Signal=SDIO_CMD
-PD3.GPIOParameters=GPIO_Label
+PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD3.GPIO_Label=VAC2_CTL
+PD3.GPIO_PuPd=GPIO_PULLDOWN
 PD3.Locked=true
 PD3.Signal=GPIO_Output
-PD4.GPIOParameters=GPIO_Label
+PD4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD4.GPIO_Label=VAC1_CTL
+PD4.GPIO_PuPd=GPIO_PULLDOWN
 PD4.Locked=true
 PD4.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_Label
+PD5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD5.GPIO_Label=MS2_CTL
+PD5.GPIO_PuPd=GPIO_PULLDOWN
 PD5.Locked=true
 PD5.Signal=GPIO_Output
-PD6.GPIOParameters=GPIO_Label
+PD6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD6.GPIO_Label=MS1_CTL
+PD6.GPIO_PuPd=GPIO_PULLDOWN
 PD6.Locked=true
 PD6.Signal=GPIO_Output
-PD7.GPIOParameters=GPIO_Label
+PD7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD7.GPIO_Label=UVF_CTL
+PD7.GPIO_PuPd=GPIO_PULLDOWN
 PD7.Locked=true
 PD7.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultOD
@@ -355,32 +371,31 @@ PE10.GPIO_Label=JETTING
 PE10.GPIO_PuPd=GPIO_PULLDOWN
 PE10.Locked=true
 PE10.Signal=GPXTI10
-PE13.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE13.GPIO_Label=SW3
-PE13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE13.GPIO_PuPd=GPIO_PULLUP
 PE13.Locked=true
-PE13.Signal=GPXTI13
-PE14.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PE13.Signal=GPIO_Input
+PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE14.GPIO_Label=SW2
-PE14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
-PE14.Signal=GPXTI14
-PE15.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PE14.Signal=GPIO_Input
+PE15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE15.GPIO_Label=SW1
-PE15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE15.GPIO_PuPd=GPIO_PULLUP
 PE15.Locked=true
-PE15.Signal=GPXTI15
+PE15.Signal=GPIO_Input
 PE2.Mode=TX_Only_Simplex_Unidirect_Master
 PE2.Signal=SPI4_SCK
-PE3.GPIOParameters=GPIO_Label
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=VSEL_A
+PE3.GPIO_PuPd=GPIO_PULLUP
 PE3.Locked=true
 PE3.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_Label
+PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=VSEL_B
+PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
 PE4.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_Label
@@ -483,12 +498,6 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
-SH.GPXTI14.0=GPIO_EXTI14
-SH.GPXTI14.ConfNb=1
-SH.GPXTI15.0=GPIO_EXTI15
-SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
