--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -68,7 +68,7 @@ FREERTOS.Mutexes01=MUart1Mutex,Dynamic,NULL,Available;MTim8Mutex,Dynamic,NULL,Av
 FREERTOS.Tasks01=defaultTask,32,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,24,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,24,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,24,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,24,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,24,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Mode=I2C_Fast
+I2C1.I2C_Mode=I2C_Standard
 I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F427VGT6
