--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -14,7 +14,9 @@ CAD.provider=
 Dma.Request0=SDIO_RX
 Dma.Request1=SDIO_TX
 Dma.Request2=UART7_TX
-Dma.RequestsNb=3
+Dma.Request3=UART8_RX
+Dma.Request4=UART8_TX
+Dma.RequestsNb=5
 Dma.SDIO_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SDIO_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.SDIO_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
@@ -51,6 +53,26 @@ Dma.UART7_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART7_TX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.UART7_TX.2.Priority=DMA_PRIORITY_LOW
 Dma.UART7_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART8_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART8_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART8_RX.3.Instance=DMA1_Stream6
+Dma.UART8_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART8_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.UART8_RX.3.Mode=DMA_NORMAL
+Dma.UART8_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART8_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.UART8_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.UART8_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART8_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART8_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART8_TX.4.Instance=DMA1_Stream0
+Dma.UART8_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART8_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.UART8_TX.4.Mode=DMA_NORMAL
+Dma.UART8_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART8_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.UART8_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.UART8_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
@@ -83,11 +105,12 @@ Mcu.IP14=TIM4
 Mcu.IP15=TIM8
 Mcu.IP16=TIM9
 Mcu.IP17=UART7
-Mcu.IP18=USART1
-Mcu.IP19=USART3
+Mcu.IP18=UART8
+Mcu.IP19=USART1
 Mcu.IP2=FATFS
-Mcu.IP20=USB_DEVICE
-Mcu.IP21=USB_OTG_HS
+Mcu.IP20=USART3
+Mcu.IP21=USB_DEVICE
+Mcu.IP22=USB_OTG_HS
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C1
 Mcu.IP5=NVIC
@@ -95,7 +118,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SDIO
 Mcu.IP8=SPI1
 Mcu.IP9=SPI4
-Mcu.IPNb=22
+Mcu.IPNb=23
 Mcu.Name=STM32F427V(G-I)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -107,58 +130,63 @@ Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin15=PC4
 Mcu.Pin16=PC5
-Mcu.Pin17=PB1
-Mcu.Pin18=PE7
-Mcu.Pin19=PE8
+Mcu.Pin17=PB0
+Mcu.Pin18=PB1
+Mcu.Pin19=PE7
 Mcu.Pin2=PE4
-Mcu.Pin20=PE9
-Mcu.Pin21=PE10
-Mcu.Pin22=PE13
-Mcu.Pin23=PE14
-Mcu.Pin24=PE15
-Mcu.Pin25=PB14
-Mcu.Pin26=PB15
-Mcu.Pin27=PD8
-Mcu.Pin28=PD12
-Mcu.Pin29=PD13
+Mcu.Pin20=PE8
+Mcu.Pin21=PE9
+Mcu.Pin22=PE10
+Mcu.Pin23=PE13
+Mcu.Pin24=PE14
+Mcu.Pin25=PE15
+Mcu.Pin26=PB12
+Mcu.Pin27=PB14
+Mcu.Pin28=PB15
+Mcu.Pin29=PD8
 Mcu.Pin3=PE5
-Mcu.Pin30=PD14
-Mcu.Pin31=PD15
-Mcu.Pin32=PC6
-Mcu.Pin33=PC7
-Mcu.Pin34=PC8
-Mcu.Pin35=PC9
-Mcu.Pin36=PA8
-Mcu.Pin37=PA9
-Mcu.Pin38=PA10
-Mcu.Pin39=PA11
+Mcu.Pin30=PD12
+Mcu.Pin31=PD13
+Mcu.Pin32=PD14
+Mcu.Pin33=PD15
+Mcu.Pin34=PC6
+Mcu.Pin35=PC7
+Mcu.Pin36=PC8
+Mcu.Pin37=PC9
+Mcu.Pin38=PA8
+Mcu.Pin39=PA9
 Mcu.Pin4=PE6
-Mcu.Pin40=PA12
-Mcu.Pin41=PA13
-Mcu.Pin42=PA14
-Mcu.Pin43=PC12
-Mcu.Pin44=PD0
-Mcu.Pin45=PD2
-Mcu.Pin46=PD3
-Mcu.Pin47=PD4
-Mcu.Pin48=PD5
-Mcu.Pin49=PD6
+Mcu.Pin40=PA10
+Mcu.Pin41=PA11
+Mcu.Pin42=PA12
+Mcu.Pin43=PA13
+Mcu.Pin44=PA14
+Mcu.Pin45=PC12
+Mcu.Pin46=PD0
+Mcu.Pin47=PD2
+Mcu.Pin48=PD3
+Mcu.Pin49=PD4
 Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin50=PD7
-Mcu.Pin51=PB3
-Mcu.Pin52=PB4
-Mcu.Pin53=PB5
-Mcu.Pin54=PB6
-Mcu.Pin55=PB7
-Mcu.Pin56=VP_FATFS_VS_SDIO
-Mcu.Pin57=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin58=VP_SYS_VS_tim7
-Mcu.Pin59=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin50=PD5
+Mcu.Pin51=PD6
+Mcu.Pin52=PD7
+Mcu.Pin53=PB3
+Mcu.Pin54=PB4
+Mcu.Pin55=PB5
+Mcu.Pin56=PB6
+Mcu.Pin57=PB7
+Mcu.Pin58=PB8
+Mcu.Pin59=PE0
 Mcu.Pin6=PH1/OSC_OUT
+Mcu.Pin60=PE1
+Mcu.Pin61=VP_FATFS_VS_SDIO
+Mcu.Pin62=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin63=VP_SYS_VS_tim7
+Mcu.Pin64=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin7=PC1
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=60
+Mcu.PinsNb=65
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=JETTING_FPGA_REPLY,16;ALL_EMG_STOP,1;JETTING_UART_CPLT,8;ALL_NEW_TASK,4;MAIN_TASK_CPLT,4
 Mcu.UserName=STM32F427VGTx
@@ -166,7 +194,9 @@ MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -196,6 +226,7 @@ NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:false\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UART7_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.UART8_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=MX_TRIG
@@ -261,11 +292,19 @@ PA9.GPIO_ModeDefaultOD=GPIO_MODE_AF_PP
 PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Mode=Half_duplex(single_wire_mode)
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=USB_DET1
+PB0.Locked=true
+PB0.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=EN37V
 PB1.GPIO_PuPd=GPIO_PULLDOWN
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=USB_DET2
+PB12.Locked=true
+PB12.Signal=GPIO_Input
 PB14.Mode=Device_Only_FS
 PB14.Signal=USB_OTG_HS_DM
 PB15.Mode=Device_Only_FS
@@ -284,6 +323,11 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB8.GPIO_Label=MOTOR_EN
+PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB8.Locked=true
+PB8.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=TH_FB
 PC1.Locked=true
@@ -366,6 +410,10 @@ PD8.GPIO_PuPd=GPIO_PULLUP
 PD8.Locked=true
 PD8.Mode=Half_duplex(single_wire_mode)
 PD8.Signal=USART3_TX
+PE0.Mode=Asynchronous
+PE0.Signal=UART8_RX
+PE1.Mode=Asynchronous
+PE1.Signal=UART8_TX
 PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE10.GPIO_Label=JETTING
 PE10.GPIO_PuPd=GPIO_PULLDOWN
@@ -451,7 +499,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_UART7_Init-UART7-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true,14-MX_SDIO_SD_Init-SDIO-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM9_Init-TIM9-false-HAL-true,18-MX_FATFS_Init-FATFS-false-HAL-false,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_UART7_Init-UART7-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true,14-MX_SDIO_SD_Init-SDIO-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM9_Init-TIM9-false-HAL-true,18-MX_FATFS_Init-FATFS-false-HAL-false,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,20-MX_UART8_Init-UART8-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -591,6 +639,9 @@ UART7.BaudRate=256000
 UART7.IPParameters=VirtualMode,BaudRate,Mode
 UART7.Mode=MODE_TX
 UART7.VirtualMode=Asynchronous
+UART8.BaudRate=921600
+UART8.IPParameters=VirtualMode,BaudRate
+UART8.VirtualMode=Asynchronous
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
