Refactor GPIO initialization: change pull-up settings to no pull for improved signal integrity

--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -97,91 +97,90 @@ Mcu.CPN=STM32F427VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=SYS
-Mcu.IP11=TIM1
-Mcu.IP12=TIM2
-Mcu.IP13=TIM3
-Mcu.IP14=TIM4
-Mcu.IP15=TIM8
-Mcu.IP16=TIM9
-Mcu.IP17=UART7
-Mcu.IP18=UART8
-Mcu.IP19=USART1
+Mcu.IP10=TIM1
+Mcu.IP11=TIM2
+Mcu.IP12=TIM3
+Mcu.IP13=TIM4
+Mcu.IP14=TIM8
+Mcu.IP15=TIM10
+Mcu.IP16=UART7
+Mcu.IP17=UART8
+Mcu.IP18=USART1
+Mcu.IP19=USART3
 Mcu.IP2=FATFS
-Mcu.IP20=USART3
-Mcu.IP21=USB_DEVICE
-Mcu.IP22=USB_OTG_HS
+Mcu.IP20=USB_DEVICE
+Mcu.IP21=USB_OTG_HS
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C1
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=SDIO
-Mcu.IP8=SPI1
-Mcu.IP9=SPI4
-Mcu.IPNb=23
+Mcu.IP8=SPI4
+Mcu.IP9=SYS
+Mcu.IPNb=22
 Mcu.Name=STM32F427V(G-I)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB0
-Mcu.Pin18=PB1
-Mcu.Pin19=PE7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PE7
+Mcu.Pin16=PE8
+Mcu.Pin17=PE9
+Mcu.Pin18=PE10
+Mcu.Pin19=PE13
 Mcu.Pin2=PE4
-Mcu.Pin20=PE8
-Mcu.Pin21=PE9
-Mcu.Pin22=PE10
-Mcu.Pin23=PE13
-Mcu.Pin24=PE14
-Mcu.Pin25=PE15
-Mcu.Pin26=PB12
-Mcu.Pin27=PB14
-Mcu.Pin28=PB15
-Mcu.Pin29=PD8
+Mcu.Pin20=PE14
+Mcu.Pin21=PE15
+Mcu.Pin22=PB12
+Mcu.Pin23=PB14
+Mcu.Pin24=PB15
+Mcu.Pin25=PD8
+Mcu.Pin26=PD12
+Mcu.Pin27=PD13
+Mcu.Pin28=PD14
+Mcu.Pin29=PD15
 Mcu.Pin3=PE5
-Mcu.Pin30=PD12
-Mcu.Pin31=PD13
-Mcu.Pin32=PD14
-Mcu.Pin33=PD15
-Mcu.Pin34=PC6
-Mcu.Pin35=PC7
-Mcu.Pin36=PC8
-Mcu.Pin37=PC9
-Mcu.Pin38=PA8
-Mcu.Pin39=PA9
+Mcu.Pin30=PC6
+Mcu.Pin31=PC7
+Mcu.Pin32=PC8
+Mcu.Pin33=PC9
+Mcu.Pin34=PA8
+Mcu.Pin35=PA9
+Mcu.Pin36=PA10
+Mcu.Pin37=PA11
+Mcu.Pin38=PA12
+Mcu.Pin39=PA13
 Mcu.Pin4=PE6
-Mcu.Pin40=PA10
-Mcu.Pin41=PA11
-Mcu.Pin42=PA12
-Mcu.Pin43=PA13
-Mcu.Pin44=PA14
-Mcu.Pin45=PC12
-Mcu.Pin46=PD0
-Mcu.Pin47=PD2
-Mcu.Pin48=PD3
-Mcu.Pin49=PD4
+Mcu.Pin40=PA14
+Mcu.Pin41=PC10
+Mcu.Pin42=PC11
+Mcu.Pin43=PC12
+Mcu.Pin44=PD0
+Mcu.Pin45=PD2
+Mcu.Pin46=PD3
+Mcu.Pin47=PD4
+Mcu.Pin48=PD5
+Mcu.Pin49=PD6
 Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin50=PD5
-Mcu.Pin51=PD6
-Mcu.Pin52=PD7
-Mcu.Pin53=PB3
-Mcu.Pin54=PB4
-Mcu.Pin55=PB5
-Mcu.Pin56=PB6
-Mcu.Pin57=PB7
-Mcu.Pin58=PB8
-Mcu.Pin59=PE0
+Mcu.Pin50=PD7
+Mcu.Pin51=PB3
+Mcu.Pin52=PB4
+Mcu.Pin53=PB5
+Mcu.Pin54=PB6
+Mcu.Pin55=PB7
+Mcu.Pin56=PB8
+Mcu.Pin57=PB9
+Mcu.Pin58=PE0
+Mcu.Pin59=PE1
 Mcu.Pin6=PH1/OSC_OUT
-Mcu.Pin60=PE1
-Mcu.Pin61=VP_FATFS_VS_SDIO
-Mcu.Pin62=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin63=VP_SYS_VS_tim7
+Mcu.Pin60=VP_FATFS_VS_SDIO
+Mcu.Pin61=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin62=VP_SYS_VS_tim7
+Mcu.Pin63=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin64=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin7=PC1
 Mcu.Pin8=PA1
@@ -231,26 +230,29 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=MX_TRIG
 PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.GPIO_PuPd=GPIO_NOPULL
 PA1.Locked=true
 PA1.Signal=GPXTI1
-PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA10.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA10.GPIO_Label=LEDR
 PA10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
+PA10.PinState=GPIO_PIN_SET
 PA10.Signal=GPIO_Output
-PA11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA11.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA11.GPIO_Label=LEDG
 PA11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Locked=true
+PA11.PinState=GPIO_PIN_SET
 PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA12.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA12.GPIO_Label=LEDB
 PA12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA12.GPIO_PuPd=GPIO_PULLUP
 PA12.Locked=true
+PA12.PinState=GPIO_PIN_SET
 PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -259,30 +261,15 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA2.GPIO_Label=MZ1_TRIG
 PA2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PA2.GPIO_PuPd=GPIO_PULLUP
+PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.Locked=true
 PA2.Signal=GPXTI2
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA3.GPIO_Label=MZ2_TRIG
 PA3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PA3.GPIO_PuPd=GPIO_PULLUP
+PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.Locked=true
 PA3.Signal=GPXTI3
-PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA4.GPIO_Label=VSEL_C
-PA4.GPIO_PuPd=GPIO_PULLUP
-PA4.Locked=true
-PA4.Signal=GPIO_Output
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA5.Signal=SPI1_SCK
-PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA6.GPIO_Label=VSEL_D
-PA6.GPIO_PuPd=GPIO_PULLUP
-PA6.Locked=true
-PA6.Signal=GPIO_Output
-PA7.Locked=true
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
-PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=MMX
 PA8.Locked=true
@@ -323,15 +310,28 @@ PB6.Signal=I2C1_SCL
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB8.GPIO_Label=MOTOR_EN
-PB8.GPIO_PuPd=GPIO_PULLDOWN
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=HTR_CTL
 PB8.Locked=true
-PB8.Signal=GPIO_Output
+PB8.Signal=S_TIM10_CH1
+PB9.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PB9.GPIO_Label=VSEL_A
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
+PB9.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=TH_FB
 PC1.Locked=true
 PC1.Signal=ADCx_IN11
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=MOTOR_EN
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=VCOM_EN
+PC11.Locked=true
+PC11.Signal=GPIO_Output
 PC12.Mode=SD_1_bit
 PC12.Signal=SDIO_CK
 PC4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
@@ -436,20 +436,24 @@ PE15.Locked=true
 PE15.Signal=GPIO_Input
 PE2.Mode=TX_Only_Simplex_Unidirect_Master
 PE2.Signal=SPI4_SCK
-PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE3.GPIO_Label=VSEL_A
+PE3.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PE3.GPIO_Label=VSEL_B
 PE3.GPIO_PuPd=GPIO_PULLUP
 PE3.Locked=true
+PE3.PinState=GPIO_PIN_SET
 PE3.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PE4.GPIO_Label=VSEL_B
+PE4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PE4.GPIO_Label=VSEL_C
 PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
+PE4.PinState=GPIO_PIN_SET
 PE4.Signal=GPIO_Output
-PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=HTR_CTL
+PE5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PE5.GPIO_Label=VSEL_D
+PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
-PE5.Signal=S_TIM9_CH1
+PE5.PinState=GPIO_PIN_SET
+PE5.Signal=GPIO_Output
 PE6.Mode=TX_Only_Simplex_Unidirect_Master
 PE6.Signal=SPI4_MOSI
 PE7.Mode=Asynchronous
@@ -483,7 +487,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -499,7 +503,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_UART7_Init-UART7-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true,14-MX_SDIO_SD_Init-SDIO-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_TIM2_Init-TIM2-false-HAL-true,17-MX_TIM9_Init-TIM9-false-HAL-true,18-MX_FATFS_Init-FATFS-false-HAL-false,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,20-MX_UART8_Init-UART8-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_UART7_Init-UART7-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_USART3_UART_Init-USART3-false-HAL-true,13-MX_SDIO_SD_Init-SDIO-false-HAL-true,14-MX_SPI4_Init-SPI4-false-HAL-true,15-MX_TIM2_Init-TIM2-false-HAL-true,16-MX_FATFS_Init-FATFS-false-HAL-false,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,18-MX_UART8_Init-UART8-false-HAL-true,19-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -556,6 +560,8 @@ SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+SH.S_TIM10_CH1.0=TIM10_CH1,PWM Generation1 CH1
+SH.S_TIM10_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
@@ -578,16 +584,6 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
-SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
-SH.S_TIM9_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CLKPhase=SPI_PHASE_1EDGE
-SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=2.625 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 SPI4.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI4.CalculateBaudRate=2.625 MBits/s
 SPI4.Direction=SPI_DIRECTION_2LINES
@@ -600,6 +596,10 @@ TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,AutoReloadPreload,Period
 TIM1.OC1Preload_PWM=DISABLE
 TIM1.Period=999
 TIM1.Prescaler=83
+TIM10.Channel=TIM_CHANNEL_1
+TIM10.IPParameters=Channel,Prescaler,Period
+TIM10.Period=999
+TIM10.Prescaler=83
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,AutoReloadPreload,TIM_MasterSlaveMode,TIM_MasterOutputTrigger
@@ -630,11 +630,6 @@ TIM8.OC2Preload_PWM=DISABLE
 TIM8.OC4Preload_PWM=DISABLE
 TIM8.Period=999
 TIM8.Prescaler=83
-TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM9.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload
-TIM9.Period=999
-TIM9.Prescaler=83
 UART7.BaudRate=512000
 UART7.IPParameters=VirtualMode,BaudRate,Mode
 UART7.Mode=MODE_TX
@@ -658,6 +653,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 board=custom
