Update FATFS configuration: Modify code page to 936, enable long file name support, and add exFAT support; Increase stack size for default task in FreeRTOS

--- a/CRX_JET_FINAL.ioc
+++ b/CRX_JET_FINAL.ioc
@@ -74,6 +74,11 @@ Dma.UART8_TX.4.PeriphInc=DMA_PINC_DISABLE
 Dma.UART8_TX.4.Priority=DMA_PRIORITY_LOW
 Dma.UART8_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
+FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_FS_EXFAT,_FS_NORTC
+FATFS._CODE_PAGE=936
+FATFS._FS_EXFAT=1
+FATFS._FS_NORTC=0
+FATFS._USE_LFN=2
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
 FATFS0.BSP.component=
@@ -87,7 +92,7 @@ FATFS0.BSP.solution=PD0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,Mutexes01
 FREERTOS.Mutexes01=MUart1Mutex,Dynamic,NULL,Available;MTim8Mutex,Dynamic,NULL,Available
-FREERTOS.Tasks01=defaultTask,32,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,24,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,24,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,24,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,24,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,24,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,32,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;motorTask,24,128,StartMotorTask,As external,NULL,Dynamic,NULL,NULL;pumpTask,24,128,StartPumpTask,As external,NULL,Dynamic,NULL,NULL;vacTask,24,128,StartVacTask,As external,NULL,Dynamic,NULL,NULL;jettingTask,24,128,StartJettingTask,As external,NULL,Dynamic,NULL,NULL;headerTask,24,128,StartHeaderTask,As external,NULL,Dynamic,NULL,NULL;sensorTask,8,128,StartSensorTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Standard
